--- a/contact.html
+++ b/contact.html
@@ -7,11 +7,10 @@
 	<link rel="stylesheet" type="text/css" href="./css/style.css">
 	<script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
 	<script type="text/javascript" src="./js/main.js"></script>
-
 </head>
 <body>
 	<div class="header">
-		<center><h1 class = "homepage-name">Han Zhao</h1></center>
+		<center><h1 class = "name">Han Zhao</h1></center>
 	</div>
 	<div class="row">
 		<div class="col-3 menu" id = "menu-bar">
@@ -27,20 +26,16 @@
 		<div class="col-6" id = "main-content">
 			<!-- <h1 class = 'content-header'>The City</h1>
 			<p>Chania is the capital of the Chania region on the island of Crete. The city can be divided in two parts, the old town and the modern city.</p> -->
-			<ul class = "content-header-list" >
-			<li class = "content-header">Basic Information</li>
+			<ul class = "content-header-list" >			
 			<ul class = "content-list">
-				<li class = "content">Born in April 1996 in China</li>
-				<li class = "content">Current un undergraduate student in University of California, Irvine. My major is Computer Science, and I will graduate in June, 2017.</li>
-				<li class = "content">Intern as Backend Developer at Orbee.Co<br><br></li>
-				
+				<h2>Contact Information</h2>
+				<li class = "content-contact">Email: zhaoh8@uci.edu</li>
+				<li class = "content-contact">Phone: 949-527-2175</li>
+				<li class = "content-contact"><a href="https://www.linkedin.com/in/han-zhao-310528112?trk=hp-identity-name">Go to my Linkedin page</a>
+				</li>
+				<li class = "content-contact"><a href="https://www.facebook.com/profile.php?id=100005943161585">Go to my Facebook page</a>
+				</li>
 			</ul>
-			<li class = "content-header">More About Me</li>
-			<ul class = "content-list">
-				<li class = "content">Have a cat named "Pakachu"</li>
-				<li class = "content">I am the only child in my family.</li>
-				<li class = "content">Love challenge and is a risk taker.</li>
-				<li class = "content">Hate color pink.</li>
 			</ul>
 		</div>
 		<div class="col-3 right">
