--- a/my-interests.html
+++ b/my-interests.html
@@ -7,11 +7,10 @@
 	<link rel="stylesheet" type="text/css" href="./css/style.css">
 	<script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
 	<script type="text/javascript" src="./js/main.js"></script>
-
 </head>
 <body>
 	<div class="header">
-		<center><h1 class = "homepage-name">Han Zhao</h1></center>
+		<center><h1 class = "name">Han Zhao</h1></center>
 	</div>
 	<div class="row">
 		<div class="col-3 menu" id = "menu-bar">
@@ -28,20 +27,20 @@
 			<!-- <h1 class = 'content-header'>The City</h1>
 			<p>Chania is the capital of the Chania region on the island of Crete. The city can be divided in two parts, the old town and the modern city.</p> -->
 			<ul class = "content-header-list" >
-			<li class = "content-header">Basic Information</li>
+			<li class = "content-header">My Interests</li>
 			<ul class = "content-list">
-				<li class = "content">Born in April 1996 in China</li>
-				<li class = "content">Current un undergraduate student in University of California, Irvine. My major is Computer Science, and I will graduate in June, 2017.</li>
-				<li class = "content">Intern as Backend Developer at Orbee.Co<br><br></li>
+				<li class = "content">I love programming. I didn't know much about programming before college. After taking the first programming class, I felt programming is what I want to do for my career and I decided to be a programmer. I have been programming for four years. I enjoyed programming and I kept learning new things every day.</li>
+				<li class = "content">I love playing the piano. I have a electronic piano, it provides me a way to release all the stress.</li>
+				<li class = "content">I love baking and cooking. I like to stay in the kitchen and give myself a treat. Cooking makes me live in a style.<br><br></li>
 				
 			</ul>
-			<li class = "content-header">More About Me</li>
+			<li class = "content-header">More</li>
 			<ul class = "content-list">
-				<li class = "content">Have a cat named "Pakachu"</li>
-				<li class = "content">I am the only child in my family.</li>
-				<li class = "content">Love challenge and is a risk taker.</li>
-				<li class = "content">Hate color pink.</li>
-			</ul>
+				<li class = "content">I love watching movies.</li>
+				<li class = "content">I love traveling. </li>
+				<li class = "content">I love dancing Latin.</li>
+				<li class = "content">And more for you to find out...</li>
+			</ul>	
 		</div>
 		<div class="col-3 right">
 			<div class="photo">
