--- a/my-skills.html
+++ b/my-skills.html
@@ -7,11 +7,10 @@
 	<link rel="stylesheet" type="text/css" href="./css/style.css">
 	<script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
 	<script type="text/javascript" src="./js/main.js"></script>
-
 </head>
 <body>
 	<div class="header">
-		<center><h1 class = "homepage-name">Han Zhao</h1></center>
+		<center><h1 class = "name">Han Zhao</h1></center>
 	</div>
 	<div class="row">
 		<div class="col-3 menu" id = "menu-bar">
@@ -28,20 +27,19 @@
 			<!-- <h1 class = 'content-header'>The City</h1>
 			<p>Chania is the capital of the Chania region on the island of Crete. The city can be divided in two parts, the old town and the modern city.</p> -->
 			<ul class = "content-header-list" >
-			<li class = "content-header">Basic Information</li>
+			<li class = "content-header">My Skills</li>
 			<ul class = "content-list">
-				<li class = "content">Born in April 1996 in China</li>
-				<li class = "content">Current un undergraduate student in University of California, Irvine. My major is Computer Science, and I will graduate in June, 2017.</li>
-				<li class = "content">Intern as Backend Developer at Orbee.Co<br><br></li>
-				
+				<li class = "content">Full-stack development. I have built two web applications. Both of them follow the three-layer architecture.</li>
+				<li class = "content">Backend development. In change of two services in my interned company. Development about automation of generating embed code process.</li>
+				<li class = "content">Database management.<br><br></li>
 			</ul>
-			<li class = "content-header">More About Me</li>
+			<li class = "content-header">More About My Skills</li>
 			<ul class = "content-list">
-				<li class = "content">Have a cat named "Pakachu"</li>
-				<li class = "content">I am the only child in my family.</li>
-				<li class = "content">Love challenge and is a risk taker.</li>
-				<li class = "content">Hate color pink.</li>
-			</ul>
+				<li class = "content">Familiar with AWS EC2, and S3 cloud storage.</li>
+				<li class = "content">Programming language: Java, C++, Ruby, Python, SQL, JS, HTML5/CSS3</li>
+				<li class = "content">Tools and OS: Linux, AWS, Tomcat, Git, JMeter, Eclipse. <br><br></li>
+			</ul>	
+			
 		</div>
 		<div class="col-3 right">
 			<div class="photo">
