--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	<div class="row">
 		<div class="col-3 menu" id = "menu-bar">
 		<ul>
-			<li><a href="./main.html">Home</a></li>
+			<li><a href="./index.html">Home</a></li>
 			<li><a href="./my-interests.html">My Interests</a></li>
 			<li><a href="./my-skills.html">My Skills</a></li>
 			<li><a href="./contact.html">Contact Information</a></li>
