--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 			<li><a href="./my-skills.html">My Skills</a></li>
 			<li><a href="./contact.html">Contact Information</a></li>
 			<li><a href="./other/HanZhaoResume.pdf">My Resume</a></li>
+			<li><a href="./final.html">Final</a></li>
 		</ul>
 		</div>
 
